Giraph Change Log

Release 1.1.0 - unreleased
  GIRAPH-793: Create necessary documentation for Giraph-Gora integration 
  (enato2099 via claudio)

  GIRAPH-760: Create EdgeOutputFormat to Apache Gora (renato2099 via claudio)

  GIRAPH-759: Create EdgeInputFormat from Apache Gora (renato2099 via claudio)

  GIRAPH-758: Create VertexOutputFormat to Apache Gora (renato2099 via claudio)
  
  GIRAPH-757: Create VertexInputFormat from Apache Gora (renato2099 via claudio)

  GIRAPH-442: FileNotFoundException: <baseDirectory>/_zkServer is checked before it is created
  (miteshsjat via claudio)

  GIRAPH-796: Site build error with maven 3.1 (armax00 via claudio)

  GIRAPH-782: giraph script can't find GIRAPH_ENV_DIR when called via $PATH (rvs)

  GIRAPH-783: giraph bin script should pick up giraph-core jar to pass to hadoop (rvs) 

  GIRAPH-781: binary tarball lacks /bin and /conf directories (rvs)

  GIRAPH-749: Update documentation according to the new EdgeOutputFormat API 
  (armax00 via claudio)

  GIRAPH-738: Fix typos in quick start guide (aladagemre via claudio)

  GIRAPH-755: Make ZooKeeper port list available to input/output format (armax00 via claudio)

  GIRAPH-737: Giraph Application Master: Move to new and stable YARN API (mislam via ereisman)

  GIRAPH-791: HiveGiraphRunner picks -D options too late (majakabiljo)

  GIRAPH-790: Add a way to automatically retry a job (majakabiljo)

  GIRAPH-789: Upgrade hive-io to 0.20 - less metastore accesses (majakabiljo)

  GIRAPH-787: Use HiveIO 1.9 (gmalewicz via aching)

  GIRAPH-786: XSparseVector create a lot of objects in add/write
  (ikabiljo via majakabiljo)

  GIRAPH-773: Cannot use only EdgeOutputFormat (armax00 via claudio)

  GIRAPH-779: Make it easier to reuse objects with hive-io input (majakabiljo)

  GIRAPH-778: Testing with TestGraph is broken (majakabiljo)

  GIRAPH-777: Fix bug from GIRAPH-775 (majakabiljo)

  GIRAPH-776: Update Giraph to use HiveIO 0.18 (gmalewicz via majakabiljo)
